# Game-Boy-Emulator

./: CMakeLists.txt  CPU.c  CPU.h  CPU_Fetching.c  CPU_Processing.c  CPU_utils.c  Cartridge.c  Cartridge.h  DirectMemoryAccess.c  DirectMemoryAccess.h  Emulator.c  Emulator.h  GPU.c  GPU.h  GPU_Pipeline.c  GPU_StateMachine.c  GPU_StateMachine.h  GUI.c  GUI.h  IO.c  IO.h  Input.c  Input.h  Instructions.c  Instructions.h  Interrupts.c  Interrupts.h  LCD.c  LCD.h  MemoryBus.c  MemoryBus.h  RAM.c  RAM.h  README.md  Stack.c  Stack.h  Timer.c  Timer.h  main.c  utils.h
SDL2-2.26.4/: WhatsNew.txt
SDL2-2.26.4/docs/: README-android.md  README-gdk.md  README-raspberrypi.md  README-winrt.md  doxyfile
SDL2-2.26.4/i686-w64-mingw32/include/SDL2/: SDL_config.h  SDL_hints.h  SDL_opengles2_gl2.h  SDL_rwops.h  SDL_system.h  begin_code.h
SDL2-2.26.4/test/: CMakeLists.txt  acinclude.m4  checkkeys.c  checkkeysthreads.c  controllermap.c  testautomation.c  testautomation_audio.c  testautomation_guid.c  testautomation_math.c  testautomation_mouse.c  testautomation_pixels.c  testautomation_rwops.c  testautomation_sdltest.c  testautomation_stdlib.c  testautomation_surface.c  testautomation_timer.c  testautomation_video.c  testfile.c  testgamecontroller.c  testgl2.c  testgles2.c  testhaptic.c  testhittesting.c  testiconv.c  testime.c  testoffscreen.c  testplatform.c  testpower.c  testqsort.c  testsem.c  testshader.c  testtimer.c  testvulkan.c  testwm2.c  testyuv.c
SDL2-2.26.4/x86_64-w64-mingw32/include/SDL2/: SDL_assert.h  SDL_audio.h  SDL_cpuinfo.h  SDL_egl.h  SDL_main.h  SDL_opengl.h  (+7 more)
